Fixed scaling issues on small screens

--- a/CSS/transparent-header.css
+++ b/CSS/transparent-header.css
@@ -42,3 +42,38 @@
 .layout-mobile .emby-button-foreground {
     top: -2px !important;
 }
+
+/* Fix for scaling issues */
+@media (width: 1600px) {
+    .layout-desktop .headerRight {
+        margin-bottom: 0 !important;
+    }
+    .layout-desktop .headerTabs {
+        top: -7px !important;
+    }
+}
+@media (max-width: 1600px) {
+    .layout-desktop .emby-button-foreground {
+        top: -1px !important;
+    }
+}
+@media (max-width: 1599px) {
+    .layout-desktop .pageTitleWithLogo {
+        margin-left: 25px !important;
+    }
+    .layout-desktop .headerTabs {
+        margin-top: -65px !important;
+    }
+    .layout-desktop .headerRight {
+        margin-right: 15px !important;
+    }
+    .layout-desktop .sectionTabs {
+        width: auto !important;
+        align-self: center !important;
+    }
+}
+@media (max-width: 100em) {
+    .withSectionTabs .headerTop {
+        padding-bottom: 1em !important;
+    }
+}
